@@ -67,6 +67,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|Iterator
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -535,25 +544,36 @@ argument_list|(
 name|seqs
 argument_list|)
 expr_stmt|;
-name|List
-argument_list|<
-name|Integer
-argument_list|>
-name|intSeqs
+name|String
+name|leaderSeqNodeName
 init|=
-name|getSeqs
+name|context
+operator|.
+name|leaderSeqPath
+operator|.
+name|substring
 argument_list|(
-name|seqs
+name|context
+operator|.
+name|leaderSeqPath
+operator|.
+name|lastIndexOf
+argument_list|(
+literal|'/'
+argument_list|)
+operator|+
+literal|1
 argument_list|)
 decl_stmt|;
 if|if
 condition|(
-name|intSeqs
+operator|!
+name|seqs
 operator|.
-name|size
-argument_list|()
-operator|==
-literal|0
+name|contains
+argument_list|(
+name|leaderSeqNodeName
+argument_list|)
 condition|)
 block|{
 name|log
@@ -565,232 +585,136 @@ argument_list|)
 expr_stmt|;
 return|return;
 block|}
-comment|// We can't really rely on the sequence number stored in the old watcher, it may be stale, thus this check.
-name|int
-name|seq
-init|=
-operator|-
-literal|1
-decl_stmt|;
-comment|// See if we've already been re-added, and this is an old context. In which case, use our current sequence number.
+comment|// If any double-registrations exist for me, remove all but this latest one!
+comment|// TODO: can we even get into this state?
 name|String
-name|newLeaderSeq
+name|prefix
 init|=
-literal|""
+name|zkClient
+operator|.
+name|getSolrZooKeeper
+argument_list|()
+operator|.
+name|getSessionId
+argument_list|()
+operator|+
+literal|"-"
+operator|+
+name|context
+operator|.
+name|id
 decl_stmt|;
-for|for
-control|(
+name|Iterator
+argument_list|<
 name|String
-name|elec
-range|:
+argument_list|>
+name|it
+init|=
 name|seqs
-control|)
-block|{
-if|if
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
 condition|(
-name|getNodeName
-argument_list|(
-name|elec
-argument_list|)
+name|it
 operator|.
-name|equals
-argument_list|(
-name|getNodeName
-argument_list|(
-name|context
-operator|.
-name|leaderSeqPath
-argument_list|)
-argument_list|)
-operator|&&
-name|seq
-operator|<
-name|getSeq
-argument_list|(
-name|elec
-argument_list|)
+name|hasNext
+argument_list|()
 condition|)
 block|{
-name|seq
-operator|=
-name|getSeq
-argument_list|(
+name|String
 name|elec
-argument_list|)
-expr_stmt|;
-comment|// so use the current sequence number.
-name|newLeaderSeq
-operator|=
-name|elec
-expr_stmt|;
-break|break;
-block|}
-block|}
-comment|// Now, if we've been re-added, presumably we've also set up watchers and all that kind of thing, so we're done
+init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|StringUtils
-operator|.
-name|isNotBlank
-argument_list|(
-name|newLeaderSeq
-argument_list|)
-operator|&&
-name|seq
-operator|>
-name|getSeq
-argument_list|(
-name|context
-operator|.
-name|leaderSeqPath
-argument_list|)
-condition|)
-block|{
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"Node "
-operator|+
-name|context
-operator|.
-name|leaderSeqPath
-operator|+
-literal|" already in queue as "
-operator|+
-name|newLeaderSeq
-operator|+
-literal|" nothing to do."
-argument_list|)
-expr_stmt|;
-return|return;
-block|}
-comment|// Fallback in case we're all coming in here fresh and there is no node for this core already in the election queue.
-if|if
-condition|(
-name|seq
-operator|==
-operator|-
-literal|1
-condition|)
-block|{
-name|seq
-operator|=
-name|getSeq
-argument_list|(
-name|context
-operator|.
-name|leaderSeqPath
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|seq
-operator|<=
-name|intSeqs
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-condition|)
-block|{
-if|if
-condition|(
-name|seq
-operator|==
-name|intSeqs
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-operator|&&
 operator|!
-name|context
-operator|.
-name|leaderSeqPath
+name|elec
 operator|.
 name|equals
 argument_list|(
+name|leaderSeqNodeName
+argument_list|)
+operator|&&
+name|elec
+operator|.
+name|startsWith
+argument_list|(
+name|prefix
+argument_list|)
+condition|)
+block|{
+try|try
+block|{
+name|String
+name|toDelete
+init|=
 name|holdElectionPath
 operator|+
 literal|"/"
 operator|+
-name|seqs
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-argument_list|)
-condition|)
-block|{
-comment|//somebody else already  became the leader with the same sequence id , not me
+name|elec
+decl_stmt|;
 name|log
 operator|.
-name|info
+name|warn
 argument_list|(
-literal|"was going to be leader {} , seq(0) {}"
+literal|"Deleting duplicate registration: {}"
 argument_list|,
-name|context
-operator|.
-name|leaderSeqPath
-argument_list|,
-name|holdElectionPath
-operator|+
-literal|"/"
-operator|+
-name|seqs
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
+name|toDelete
 argument_list|)
 expr_stmt|;
-comment|//but someone else jumped the line
-comment|// The problem is that deleting the ZK node that's watched by others
-comment|// results in an unpredictable sequencing of the events and sometime the context that comes in for checking
-comment|// this happens to be after the node has already taken over leadership. So just leave out of here.
-comment|// This caused one of the tests to fail on having two nodes with the same name in the queue. I'm not sure
-comment|// the assumption that this is a bad state is valid.
+name|zkClient
+operator|.
+name|delete
+argument_list|(
+name|toDelete
+argument_list|,
+operator|-
+literal|1
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+operator|.
+name|NoNodeException
+name|e
+parameter_list|)
+block|{
+comment|// ignore
+block|}
+name|it
+operator|.
+name|remove
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 if|if
 condition|(
-name|getNodeName
-argument_list|(
-name|context
-operator|.
-name|leaderSeqPath
-argument_list|)
+name|leaderSeqNodeName
 operator|.
 name|equals
 argument_list|(
-name|getNodeName
-argument_list|(
 name|seqs
 operator|.
 name|get
 argument_list|(
 literal|0
-argument_list|)
 argument_list|)
 argument_list|)
 condition|)
 block|{
-return|return;
-block|}
-name|retryElection
-argument_list|(
-name|context
-argument_list|,
-literal|false
-argument_list|)
-expr_stmt|;
-comment|//join at the tail again
-return|return;
-block|}
+comment|// I am the leader
 try|try
 block|{
 name|runIamLeaderProcess
@@ -831,98 +755,40 @@ block|}
 else|else
 block|{
 comment|// I am not the leader - watch the node below me
-name|int
+name|String
 name|toWatch
 init|=
-operator|-
-literal|1
-decl_stmt|;
-for|for
-control|(
-name|int
-name|idx
-init|=
-literal|0
-init|;
-name|idx
-operator|<
-name|intSeqs
-operator|.
-name|size
-argument_list|()
-condition|;
-name|idx
-operator|++
-control|)
-block|{
-if|if
-condition|(
-name|intSeqs
-operator|.
-name|get
-argument_list|(
-name|idx
-argument_list|)
-operator|<
-name|seq
-operator|&&
-operator|!
-name|getNodeName
-argument_list|(
-name|context
-operator|.
-name|leaderSeqPath
-argument_list|)
-operator|.
-name|equals
-argument_list|(
-name|getNodeName
-argument_list|(
 name|seqs
 operator|.
 name|get
 argument_list|(
-name|idx
+literal|0
 argument_list|)
-argument_list|)
-argument_list|)
-condition|)
+decl_stmt|;
+for|for
+control|(
+name|String
+name|node
+range|:
+name|seqs
+control|)
 block|{
-name|toWatch
-operator|=
-name|idx
-expr_stmt|;
-block|}
 if|if
 condition|(
-name|intSeqs
+name|leaderSeqNodeName
 operator|.
-name|get
+name|equals
 argument_list|(
-name|idx
+name|node
 argument_list|)
-operator|>=
-name|seq
 condition|)
 block|{
 break|break;
 block|}
-block|}
-if|if
-condition|(
 name|toWatch
-operator|<
-literal|0
-condition|)
-block|{
-name|log
-operator|.
-name|warn
-argument_list|(
-literal|"Our node is no longer in line to be leader"
-argument_list|)
+operator|=
+name|node
 expr_stmt|;
-return|return;
 block|}
 try|try
 block|{
@@ -933,12 +799,7 @@ name|holdElectionPath
 operator|+
 literal|"/"
 operator|+
-name|seqs
-operator|.
-name|get
-argument_list|(
 name|toWatch
-argument_list|)
 decl_stmt|;
 name|zkClient
 operator|.
@@ -957,7 +818,12 @@ name|leaderSeqPath
 argument_list|,
 name|watchedNode
 argument_list|,
-name|seq
+name|getSeq
+argument_list|(
+name|context
+operator|.
+name|leaderSeqPath
+argument_list|)
 argument_list|,
 name|context
 argument_list|)
@@ -992,9 +858,27 @@ block|}
 catch|catch
 parameter_list|(
 name|KeeperException
+operator|.
+name|NoNodeException
 name|e
 parameter_list|)
 block|{
+comment|// the previous node disappeared, check if we are the leader again
+name|checkIfIamLeader
+argument_list|(
+name|context
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+name|e
+parameter_list|)
+block|{
+comment|// we couldn't set our watch for some other reason, retry
 name|log
 operator|.
 name|warn
@@ -1004,8 +888,6 @@ argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
-comment|// we couldn't set our watch - the node before us may already be down?
-comment|// we need to check if we are the leader again
 name|checkIfIamLeader
 argument_list|(
 name|context
@@ -1222,61 +1104,6 @@ throw|;
 block|}
 return|return
 name|result
-return|;
-block|}
-comment|/**    * Returns int list given list of form n_0000000001, n_0000000003, etc.    *     * @return int seqs    */
-DECL|method|getSeqs
-specifier|private
-name|List
-argument_list|<
-name|Integer
-argument_list|>
-name|getSeqs
-parameter_list|(
-name|List
-argument_list|<
-name|String
-argument_list|>
-name|seqs
-parameter_list|)
-block|{
-name|List
-argument_list|<
-name|Integer
-argument_list|>
-name|intSeqs
-init|=
-operator|new
-name|ArrayList
-argument_list|<>
-argument_list|(
-name|seqs
-operator|.
-name|size
-argument_list|()
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|String
-name|seq
-range|:
-name|seqs
-control|)
-block|{
-name|intSeqs
-operator|.
-name|add
-argument_list|(
-name|getSeq
-argument_list|(
-name|seq
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|intSeqs
 return|;
 block|}
 DECL|method|joinElection
@@ -2068,27 +1895,14 @@ block|{
 name|int
 name|i
 init|=
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
 name|getSeq
 argument_list|(
 name|o1
 argument_list|)
-argument_list|)
-operator|.
-name|compareTo
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|-
 name|getSeq
 argument_list|(
 name|o2
-argument_list|)
-argument_list|)
 argument_list|)
 decl_stmt|;
 return|return
