@@ -1223,6 +1223,29 @@ operator|!=
 literal|null
 condition|)
 block|{
+name|ElectionContext
+name|prevContext
+init|=
+name|electionContext
+operator|.
+name|get
+argument_list|(
+name|coreName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|prevContext
+operator|!=
+literal|null
+condition|)
+block|{
+name|prevContext
+operator|.
+name|cancelElection
+argument_list|()
+expr_stmt|;
+block|}
 try|try
 block|{
 name|zkClient
@@ -1332,6 +1355,15 @@ name|elector
 operator|.
 name|setup
 argument_list|(
+name|ctx
+argument_list|)
+expr_stmt|;
+name|electionContext
+operator|.
+name|put
+argument_list|(
+name|coreName
+argument_list|,
 name|ctx
 argument_list|)
 expr_stmt|;
